crates/server/tests/grammar/snapshots/r#mod__grammar__alpha034__command-2.snap
---
source: tests/grammar/alpha034.rs
expression: "parse_unwrap(&tokenize(\"$echo \\\"Hello, {name}!\\\"$\"))"
---
[
    (
        Statement(
            (
                Expression(
                    (
                        Command(
                            [],
                            [
                                (
                                    Text(
                                        "$",
                                    ),
                                    0..1,
                                ),
                                (
                                    Text(
                                        "echo \"Hello, ",
                                    ),
                                    1..14,
                                ),
                                (
                                    Expression(
                                        (
                                            Var(
                                                (
                                                    "name",
                                                    15..19,
                                                ),
                                            ),
                                            15..19,
                                        ),
                                    ),
                                    14..20,
                                ),
                                (
                                    Text(
                                        "!\"",
                                    ),
                                    20..22,
                                ),
                                (
                                    Text(
                                        "$",
                                    ),
                                    22..23,
                                ),
                            ],
                            None,
                        ),
                        0..23,
                    ),
                ),
                0..23,
            ),
        ),
        0..23,
    ),
]
