crates/server/tests/grammar/snapshots/r#mod__grammar__alpha034__command_backslash.snap
---
source: tests/grammar/alpha034.rs
expression: "compiler.tokenize(r#\"$test\\n$\"#)"
---
[
    (
        Token(
            "$",
        ),
        0..1,
    ),
    (
        Token(
            "test",
        ),
        1..5,
    ),
    (
        Token(
            "\\n",
        ),
        5..7,
    ),
    (
        Token(
            "$",
        ),
        7..8,
    ),
]
