crates/server/tests/grammar/snapshots/r#mod__grammar__alpha034__command_multi_interpolation.snap
---
source: tests/grammar/alpha034.rs
expression: "compiler.tokenize(\"$echo {a} {b} {c}$\")"
---
[
    (
        Token(
            "$",
        ),
        0..1,
    ),
    (
        Token(
            "echo ",
        ),
        1..6,
    ),
    (
        Token(
            "{",
        ),
        6..7,
    ),
    (
        Token(
            "a",
        ),
        7..8,
    ),
    (
        Token(
            "}",
        ),
        8..9,
    ),
    (
        Token(
            " ",
        ),
        9..10,
    ),
    (
        Token(
            "{",
        ),
        10..11,
    ),
    (
        Token(
            "b",
        ),
        11..12,
    ),
    (
        Token(
            "}",
        ),
        12..13,
    ),
    (
        Token(
            " ",
        ),
        13..14,
    ),
    (
        Token(
            "{",
        ),
        14..15,
    ),
    (
        Token(
            "c",
        ),
        15..16,
    ),
    (
        Token(
            "}",
        ),
        16..17,
    ),
    (
        Token(
            "$",
        ),
        17..18,
    ),
]
