crates/server/tests/grammar/snapshots/r#mod__grammar__alpha034__comment-2.snap
---
source: tests/grammar/alpha034.rs
expression: "parse_unwrap(&tokenize(\"1 + 2 // This is a comment without a newline\"))"
---
[
    (
        Statement(
            (
                Expression(
                    (
                        Add(
                            (
                                Number(
                                    (
                                        1.0,
                                        0..1,
                                    ),
                                ),
                                0..1,
                            ),
                            (
                                Number(
                                    (
                                        2.0,
                                        4..5,
                                    ),
                                ),
                                4..5,
                            ),
                        ),
                        0..5,
                    ),
                ),
                0..5,
            ),
        ),
        0..5,
    ),
    (
        Statement(
            (
                Comment(
                    (
                        Comment(
                            "This is a comment without a newline",
                        ),
                        6..44,
                    ),
                ),
                6..44,
            ),
        ),
        6..44,
    ),
]
