crates/server/tests/grammar/snapshots/r#mod__grammar__alpha034__comment.snap
---
source: tests/grammar/alpha034.rs
expression: "parse_unwrap(&tokenize(\"\n        // This is a comment\n        1 + 2\n    \"))"
---
[
    (
        Statement(
            (
                Comment(
                    (
                        Comment(
                            "This is a comment",
                        ),
                        9..30,
                    ),
                ),
                9..30,
            ),
        ),
        9..30,
    ),
    (
        Statement(
            (
                Expression(
                    (
                        Add(
                            (
                                Number(
                                    (
                                        1.0,
                                        38..39,
                                    ),
                                ),
                                38..39,
                            ),
                            (
                                Number(
                                    (
                                        2.0,
                                        42..43,
                                    ),
                                ),
                                42..43,
                            ),
                        ),
                        38..43,
                    ),
                ),
                38..43,
            ),
        ),
        38..43,
    ),
]
