crates/server/tests/grammar/snapshots/r#mod__grammar__alpha034__context_multiple_switches.snap
---
source: tests/grammar/alpha034.rs
expression: "compiler.tokenize(r#\"\"a {$b$} c\"\"#)"
---
[
    (
        Token(
            "\"",
        ),
        0..1,
    ),
    (
        Token(
            "a ",
        ),
        1..3,
    ),
    (
        Token(
            "{",
        ),
        3..4,
    ),
    (
        Token(
            "$",
        ),
        4..5,
    ),
    (
        Token(
            "b",
        ),
        5..6,
    ),
    (
        Token(
            "$",
        ),
        6..7,
    ),
    (
        Token(
            "}",
        ),
        7..8,
    ),
    (
        Token(
            " c",
        ),
        8..10,
    ),
    (
        Token(
            "\"",
        ),
        10..11,
    ),
]
